#ifndef BEAMSWITCHDETECTOR_HPP
#define BEAMSWITCHDETECTOR_HPP

class BeamSwitchDetector
{
private:
    /* data */
public:
    BeamSwitchDetector(int beamSwitchTPin, int beamSwitchRPin);
    ~BeamSwitchDetector();
};

BeamSwitchDetector::BeamSwitchDetector(int beamSwitchTPin, int beamSwitchRPin)
{
}

BeamSwitchDetector::~BeamSwitchDetector()
{
}

#endif