#ifndef SOLENOID_HPP
#define SOLENOID_HPP

class Solenoid
{
private:
    /* data */
public:
    Solenoid(int solenoidPin);
    ~Solenoid();
};

#endif