@startuml

/' Objects '/


class BeamSwitchDetector {
	+BeamSwitchDetector(int beamSwitchTPin, int beamSwitchRPin)
	+~BeamSwitchDetector()
}


class LinearActuator {
	+LinearActuator(int stepPin, int dirPin, int rxPin)
	+~LinearActuator()
}


class PING {
	-PING()
	+~PING()
	-{static} player1 : static Player
	-{static} player2 : static Player
	-{static} player3 : static Player
	-{static} player4 : static Player
	-{static} raspComManager : static RaspComManagment
	+{static} loop() : void
	+{static} setup() : void
}


class Player {
	+Player(int stepPin, int dirPin, int rxPin, int solenoidPin, int beamSwitchTPin, int beamSwitchRPin)
	+~Player()
	-beamSwitch : BeamSwitchDetector*
	-actuator : LinearActuator*
	-solenoid : Solenoid*
}


class RaspComManagment {
	+RaspComManagment(int txPin, int rxPin, int baudRate)
	+~RaspComManagment()
	+setup() : void
}


class Solenoid {
	+Solenoid(int solenoidPin)
	+~Solenoid()
}





/' Inheritance relationships '/




/' Aggregation relationships '/

.PING "4" *-- .Player


.PING *-- .RaspComManagment


.Player o-- .BeamSwitchDetector


.Player o-- .LinearActuator


.Player o-- .Solenoid






/' Nested objects '/



@enduml
